[package]
name = "meu_jogo_y2k"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_rapier2d = "0.26.0" # Esta versão é compatível com o Bevy 0.14

# Alvo de patches globais para WebAssembly
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "*", features = ["js"] } 
# O "*" diz para o Cargo aplicar a feature 'js' em QUALQUER versão do uuid que o Bevy exigir!

[profile.release]
opt-level = "z" # Otimiza agressivamente pelo tamanho do arquivo binário
lto = true      # Link-Time Optimization para remover código morto